[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/galra ship.png" type="Texture" id=1]
[ext_resource path="res://Enemy/enemy.gd" type="Script" id=2]

[node name="enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, -1.32759 )
scale = Vector2( 0.355863, 0.355863 )
texture = ExtResource( 1 )

[node name="shoot" type="Timer" parent="."]
autostart = true

[node name="move" type="Timer" parent="."]
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -7.62939e-06, -1.32759 )
scale = Vector2( 0.355863, 0.355863 )
polygon = PoolVector2Array( 0, -137.1, 0, -130, 1, -130, 1, -112, 3.89999, -55, 4.60001, -55, 10.6, -28, 12.5, -28, 23, -22.7, 33, -30.9, 33, -32.5, 35.2, -36.9, 29, -57.7, 29, -61.1, 33.9, -64.3, 36, -63.2, 36, -62, 93.5, -22, 96.4, -22, 114.4, -15, 128, -17.4, 128, -15.3, 145.3, -8, 152.1, -8, 188, -3.8, 188, -1.5, 196.3, 14, 192, 14, 132, 15, 123.4, 19, 94.9, 19, 87.7, 25, 83.1, 25, 74, 27.5, 68, 33.8, 69.4, 41, 67, 41, 31, 89, 27.6, 89, 24.2, 79, 26.3, 79, 32, 40.7, 32, 36.9, 17.9, 52, 14.7, 52, 8, 57.9, 8, 97.3, -3.39999, 142, -5.2, 142, -8.5, 145.4, -11, 144.3, -11, 142.7, -15, 137.7, -15, 133, -23, 105.3, -23, 97, -25.9, 53, -26.8, 53, -46.7, 33.1, -41, 76.9, -41, 82.1, -45.9, 85.3, -48, 84.2, -48, 83, -52, 80, -52, 77.5, -80.2, 25, -81.4, 25, -98, 18.4, -98, 16.7, -101, 13, -127.6, 13, -135.6, 8, -162, 8, -189, 7, -189, 4.89999, -199.4, -4.39999, -198.4, -7, -196.2, -7, -139, -11.8, -139, -12.5, -102, -23.5, -102, -24.1, -44.6, -63, -41.8, -63, -37.8, -55, -40.6, -55, -45.4, -41.3, -36.7, -22, -34.5, -22, -34, -22.2, -34, -23.1, -23, -30.1, -21, -34.5, -21, -39.3, -17, -53, -17, -63.1, -9.8, -133, -8.39999, -133, -7, -137.3, -7, -139.2, -4.89999, -140.3 )
[connection signal="timeout" from="shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="move" to="." method="_on_move_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
